[package]
name = "endless_roll_frontend"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
yew = { version = "0.23", features = ["csr"] }
yew-router = "0.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "WebSocket", "Event", "MessageEvent", "CloseEvent", "HtmlInputElement", "HtmlSelectElement", "EventTarget"] }
gloo-net = "0.5"
gloo-utils = "0.2"
gloo-console = "0.3"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
futures = "0.3"
anyhow = "1.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
